--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <img class="d-block w-100" src="cover3.jpg.jpeg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="..." alt="Second slide">
+      <img class="d-block w-100" src="cover11.jpg.jpeg" alt="Second slide">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="cover11.jpg.jpeg" alt="Third slide">
