--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <div class="container">
 <div class="card-deck">
   <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    <img class="card-img-top" src="good1.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="Cuber">Magician</h4>
       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
