--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
   </div>
   <div class="card">
-    <img class="card-img-top" src="good3.jpg" alt="Card image cap">
+    <img class="card-img-top" src="good3.png" alt="Card image cap">
     <div class="card-body">
       <h4 class="Cuber">Cuber</h4>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
