--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <img class="card-img-top" src="..." alt="Card image cap">
     <div class="card-body">
       <h4 class="Cuber">Magician</h4>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text">Magic is either science or not. If you look after magic,then you will be more scared.In such a way,I am a scared.</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
