--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <img class="card-img-top" src="..." alt="Card image cap">
     <div class="card-body">
       <h4 class="Cubeing">Cycleist</h4>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text">I need speed.Let me say this one thing to my mind that this is a successful cyclists.</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
@@ -99,7 +99,7 @@
     <img class="card-img-top" src="..." alt="Card image cap">
     <div class="card-body">
       <h4 class="Cuber">Cuber</h4>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <p class="card-text">Learning Cube mellan to solve the puzzle. Now i can solve 1*1,2*2,3*3,4*4,5*5 mirror and pyramid cubes.</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
