--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <img class="card-img-top" src="..." alt="Card image cap">
     <div class="card-body">
       <h4 class="Cubeing">Cycleist</h4>
-      <p class="card-text">I need speed.Let me say this one thing to my mind that this is a successful cyclists.</p>
+      <p class="card-text">I need speed.Let me say this one thing to my mind that this is a successful cyclist.</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
