--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <img class="card-img-top" src="good1.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="Cuber">Magician</h4>
-      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <p class="card-text">Magic is either science or not. If you look after magic,then you will be more scared.In such a way,I am a scared.</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
@@ -82,7 +82,7 @@
     <img class="card-img-top" src="30688864_2021995404718408_3846674668526239744_o.jpg" alt="Card image cap">
     <div class="card-body">
       <h4 class="Cubeing">Cycleist</h4>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      <p class="card-text">I need speed.Let me say this one thing to my mind that this is a successful cyclist.</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
@@ -90,7 +90,7 @@
     <img class="card-img-top" src="good3.png" alt="Card image cap">
     <div class="card-body">
       <h4 class="Cuber">Cuber</h4>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <p class="card-text">Learning Cube mellan to solve the puzzle. Now i can solve 1*1,2*2,3*3,4*4,5*5 mirror and pyramid cubes.</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
