--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
   </div>
   <div id="Cycleist"class="card">
-    <img class="card-img-top" src="good5.jpg" alt="Card image cap">
+    <img class="card-img-top" src="good5.png" alt="Card image cap">
     <div class="card-body">
       <h4 class="Cubeing">Cycleist</h4>
       <p class="card-text">I need speed.Let me say this one thing to my mind that this is a successful cyclist.</p>
