--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
   <a class="navbar-brand" href="#">Ahsan</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon">Just a simple boy. I'am Running towards Extraordinary is my Passion doing ordinary things is just lame imagination for me...! </span>
+    <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
@@ -64,7 +64,7 @@
   <h1 class="display-4">Welcome to my Website.</h1>
   <p class="lead">My name is Ahsan Habib.</p>
   <hr class="my-4">
-  <p>I am an Uncomon Man.</p>
+  <p>Just a simple boy I'am running towards extraordinary is my passion doing ordinary things is just lame imagination for me..!.</p>
   <a class="btn btn-primary btn-lg" href="https://www.facebook.com/Ahsanramsk?ref=br_rs" role="button">Learn more</a>
 </div>
 </div>
