--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <h1 class="display-4">Welcome to my Website.</h1>
   <p class="lead">My name is Ahsan Habib.</p>
   <hr class="my-4">
-  <p>Just a simple boy I'am running towards extraordinary is my passion doing ordinary things is just lame imagination for me..!.</p>
+  <p>Just a simple boy. I'am running towards extraordinary is my passion doing ordinary things is just lame imagination for me..!.</p>
   <a class="btn btn-primary btn-lg" href="https://www.facebook.com/Ahsanramsk?ref=br_rs" role="button">Learn more</a>
 </div>
 </div>
